# zhiweihaiha

./: .gitignore  Makefile  PLAN.md  README.md  config.json  ecosystem.config.js  package.json  playwright.config.ts
slideglance/: .gitignore  Cargo.toml  LICENSE-OFL-1.1  NOTICE  README.md  deny.toml  package.json  pnpm-workspace.yaml
slideglance/.cargo/: config.toml
slideglance/.github/workflows/: ci-actionlint.yml  ci-builder-benchmark.yml  ci-builder-size-limit.yml  ci-builder-vrt.yml  ci-builder.yml  ci-js-workspaces.yml  ci-vscode-extension.yml  ci.yml  pages.yml  release.yml  tauri-build.yml
slideglance/apps/: README.md
slideglance/apps/chrome-extension/: .gitignore  PRIVACY.md  README.md  manifest.config.ts  package.json  tsconfig.json  vite.config.ts
slideglance/apps/chrome-extension/scripts/: package.mjs  render-icons.mjs  render-promo.mjs
slideglance/apps/chrome-extension/src/: background.ts  jsx-shim.d.ts
slideglance/apps/chrome-extension/store-assets/: listing.md
slideglance/apps/desktop-viewer/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
slideglance/apps/desktop-viewer/src/: main.tsx
slideglance/apps/desktop-viewer/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
slideglance/apps/landing/: README.md  build.mjs  index.html  package.json  playground  screenshots  serve.mjs  styles.css
slideglance/apps/landing/scripts/: site.js  verify-links.mjs
slideglance/apps/landing/view/: index.html
slideglance/apps/vscode-extension/: .vscodeignore  CHANGELOG.md  README.md  esbuild.mjs  eslint.config.mts  package.json  tsconfig.json  vite.webview.config.ts
slideglance/apps/vscode-extension/src/: definitionProvider.ts  exportPptx.ts  extension.ts  fileUtils.ts  importResolver.ts  pptxViewer.ts  preview.ts  webviewHtml.ts
slideglance/apps/web-playground/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
slideglance/apps/web-playground/src/: main.tsx
slideglance/crates/: README.md
slideglance/crates/slideglance/: Cargo.toml  LICENSE  README.md
slideglance/crates/slideglance-color/: Cargo.toml  README.md
slideglance/crates/slideglance-color/src/: hsl.rs  lib.rs  presets.rs  resolver.rs  rgb.rs  scheme.rs  transforms.rs
slideglance/crates/slideglance-color/tests/: resolver.rs  transforms.rs
slideglance/crates/slideglance-emf/: Cargo.toml  README.md
slideglance/crates/slideglance-emf/examples/: extract.rs
slideglance/crates/slideglance-emf/src/: emf.rs  lib.rs  wmf.rs
slideglance/crates/slideglance-font/: Cargo.toml  README.md
slideglance/crates/slideglance-font/examples/: measure_title.rs
slideglance/crates/slideglance-font/src/: cjk_fallback.rs  collector.rs  fallback_metrics.rs  font_fetcher.rs  font_metric.rs  font_resolver.rs  latin_defaults.rs  lib.rs  mapping.rs  opentype.rs  script_context.rs  system_fonts.rs  text_engine.rs  text_measure.rs  text_measurer.rs  text_path.rs  text_wrap.rs  ttc.rs
slideglance/crates/slideglance-measure-wasm/: Cargo.toml
slideglance/crates/slideglance-measure-wasm/src/: lib.rs
slideglance/crates/slideglance-model/: Cargo.toml  README.md
slideglance/crates/slideglance-model/src/: chart.rs  effect.rs  fill.rs  image.rs  lib.rs  line.rs  presentation.rs  shape.rs  slide.rs  table.rs  text.rs  theme.rs
slideglance/crates/slideglance-model/tests/: serde_roundtrip.rs
slideglance/crates/slideglance-parser/: Cargo.toml  README.md
slideglance/crates/slideglance-parser/src/: archive.rs  blip_effect.rs  chart.rs  custom_geometry.rs  effect.rs  fill.rs  geometry_formula.rs  lib.rs  notes.rs  presentation.rs  raw_color.rs  relationships.rs  shape_geometry.rs  slide_layout.rs  slide_master.rs  style_reference.rs  table.rs  text_style.rs  text_style_resolver.rs  theme.rs  xml.rs
slideglance/crates/slideglance-parser/tests/: archive.rs  blip_effect.rs  chart.rs  effect.rs  fill.rs  geometry.rs  notes.rs  presentation.rs  relationships.rs  slide.rs  slide_layout.rs  slide_master.rs  style_reference.rs  table.rs  text_body.rs  text_style.rs  text_style_resolver.rs  theme.rs  xml.rs
slideglance/crates/slideglance-png/: Cargo.toml  README.md
slideglance/crates/slideglance-png/examples/: dir_to_png.rs  perceptual_diff.rs
slideglance/crates/slideglance-png/src/: lib.rs
slideglance/crates/slideglance-renderer/: Cargo.toml  README.md
slideglance/crates/slideglance-renderer/src/: blip_effects.rs  color.rs  connector.rs  effects.rs  error.rs  id_gen.rs  image.rs  lib.rs  render_result.rs  shape.rs  slide_context.rs  svg_builder.rs  transform.rs  viewbox.rs
slideglance/crates/slideglance-renderer/tests/: letter_spacing.rs
slideglance/crates/slideglance-utils/: Cargo.toml  README.md
slideglance/crates/slideglance-utils/src/: constants.rs  lib.rs  units.rs
slideglance/crates/slideglance-utils/tests/: rotation.rs
slideglance/crates/slideglance-wasm/: Cargo.toml
slideglance/crates/slideglance-wasm/src/: lib.rs
slideglance/crates/slideglance/examples/: bench_doc.rs
slideglance/crates/slideglance/src/: cache.rs  clr_map_override.rs  doc.rs  embedded_fonts.rs  font_usage.rs  lib.rs
slideglance/crates/slideglance/tests/: api_surface.rs  parse_pptx.rs
slideglance/examples/builder-reference/: README.md  build.ts  main.sgx  package.json  tsconfig.json
slideglance/examples/builder-reference/chapters/: 00-cover.xml  01-stack.xml  02-text.xml  03-list.xml  04-image.xml  05-icon-svg.xml  06-shape-line.xml  07-table.xml  08-chart.xml  09-diagrams-sequence.xml  10-diagrams-hierarchy.xml  11-diagrams-flow.xml  12-diagrams-matrix.xml  13-recipes.xml  14-templates-styles.xml  15-master-notes.xml  16-control-flow.xml
slideglance/examples/playground-samples/: README.md  build.ts  package.json  tsconfig.json
slideglance/patches/: mtx-decompressor.patch
slideglance/scripts/: build-icons.sh  build-wasm.sh  fetch-google-fonts.mjs  run-build-wasm.mjs  sync-versions.mjs
slideglance/skills/slideglance-pptx/: SKILL.md
slideglance/testing/: README.md
slideglance/testing/fixtures/: README.md
slideglance/testing/fixtures/fonts/: README.md
(+801 files in other folders)
