[package]
name = "slideglance-color"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "OOXML theme color resolution and color transforms (lumMod/lumOff/tint/shade/alpha) for slideglance"
readme = "../../README.md"
keywords = ["pptx", "powerpoint", "ooxml", "color", "theme"]
categories = ["graphics", "multimedia::images"]

[lints]
workspace = true

[dependencies]
serde = { workspace = true, optional = true }

[features]
default = []
serde = ["dep:serde"]
