[package]
name = "slideglance-measure-wasm"
# wasm-pack's manifest parser does not understand cargo workspace
# inheritance (`field.workspace = true`); see the same comment in the
# sibling `slideglance-wasm/Cargo.toml`. The `version` is synced from
# the root `package.json` by `scripts/sync-versions.mjs`.
version = "0.1.3"
edition = "2021"
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/SlideGlance/slideglance"
authors = ["Taehwan Kwag <dev@simplecore.kr>"]
description = "Standalone wasm-bindgen entry point for slideglance text measurement"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

# Same wasm-opt flags as the full `slideglance-wasm` build — the
# bundled wasm-opt in wasm-pack is too old for some resvg-emitted
# features, but enabling them is harmless on this smaller bundle that
# does not exercise them.
[package.metadata.wasm-pack.profile.release]
wasm-opt = [
    "-Oz",
    "--enable-bulk-memory",
    "--enable-nontrapping-float-to-int",
    "--enable-mutable-globals",
    "--enable-reference-types",
    "--enable-sign-ext",
]

[lints]
workspace = true

[dependencies]
slideglance-font = { workspace = true }
wasm-bindgen.workspace = true
js-sys.workspace = true
console_error_panic_hook.workspace = true
